--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,43 @@ body {
   overflow-x: hidden;
   background-color: transparent;
   font-family: 'JetBrains Mono';
+
+
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 0.5s; /* Firefox < 16 */
+      -ms-animation: fadein 0.5s; /* Internet Explorer */
+        -o-animation: fadein 0.5s; /* Opera < 12.1 */
+          animation: fadein 0.5s;
+}
+
+@keyframes fadein {
+    from { opacity: 0.8; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0.8; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0.8; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0.8; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0.8; }
+    to   { opacity: 1; }
+
 }
 
 body::-webkit-scrollbar {
@@ -303,7 +340,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 .game-section {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(2, auto);
   grid-column-gap: 25px;
   grid-row-gap: 0px;
@@ -312,6 +349,14 @@ body::-webkit-scrollbar-thumb:hover {
   background: linear-gradient(180deg, rgba(255,255,255,1) 2%, rgba(242,242,242,1) 6%, rgba(242,242,242,1) 98%, rgba(255,255,255,1) 100%);
   padding-right: 10%;
   padding-left: 15%;
+}
+.bossimg{
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 600px;
+  max-height: 400px;
+  border-radius: 100px;
+  margin-bottom: 50px;
 }
 .commands-container{
   display: flex;
