--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,48 @@ body::-webkit-scrollbar-thumb:hover {
   
 }
 
+/* coding */
+
+.coding-section {
+  display: flex;
+  align-items: center;
+  padding: 100px 0px;
+  flex-direction: column;
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 2%, rgba(242,242,242,1) 6%, rgba(242,242,242,1) 98%, rgba(255,255,255,1) 100%);
+}
+
+.coding{
+  display: flex;
+  align-items: center;
+}
+
+
+.coding-container h1{
+  margin-top: 20px;
+  margin-bottom: 25px;
+  align-items: center;
+  justify-content: center;
+}
+
+.coding-container h2{
+  margin-top: 10px;
+  margin-bottom: 15px;
+  align-items: center;
+  justify-content: center;
+}
+.coding-container p{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  color: #0D0D0D;
+  font-family: "JetBrains Mono";
+  font-size: 17px;
+  letter-spacing: 1.5px;
+  
+}
+
 /* contact */
 
 .contact-section{
