--- a/css/style.css
+++ b/css/style.css
@@ -310,11 +310,12 @@ body::-webkit-scrollbar-thumb:hover {
 /* game */
 
 .game-section {
+  background: linear-gradient(90deg, #dddddd  0%, rgba(207,74,74,0) 3%, rgba(190,4,4,0) 97%, #dddddd  100%);
   background-image: linear-gradient(180deg, #dddddd  0%, rgba(207,74,74,0) 3%, rgba(190,4,4,0) 97%, #dddddd  100%), url('../img/locations/GoldenTemple.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  display: grid;
+  max-height: 100%;
   display: grid;
   grid-template-columns: 0.5fr 3fr repeat(1, 0.5fr);
   grid-template-rows: repeat(1, 1fr);
@@ -349,6 +350,7 @@ body::-webkit-scrollbar-thumb:hover {
        animation: fadein 1s;
 }
 
+
 @keyframes fadein {
 from { opacity: 0; }
 to   { opacity: 1; }
@@ -371,6 +373,28 @@ to   { opacity: 1; }
 from { opacity: 0; }
 to   { opacity: 1; }
 }
+
+.type {
+  display:inline-flex;
+}
+
+.type span {
+  word-break: break-all;
+  height: 1.2em;
+  width:0%;
+  overflow: hidden;
+  animation:t 2s linear infinite alternate;
+}
+.type span:before {
+  content:" ";
+  display:inline-block;
+}
+
+@keyframes t{
+  90%,100% {width:100%}
+}
+
+
 
 .bossimg{
   margin-right: auto;
