--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  
+  line-height: normal;
 }
 
 
@@ -102,7 +102,6 @@
   text-shadow: 0px 0px 10px black;
 }
 
-
 /* main body and slider */
 
 html {
@@ -115,7 +114,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color:#dddddd;
 }
-
 
 body::-webkit-scrollbar {
   width: 0.5em;
@@ -178,6 +176,7 @@ body::-webkit-scrollbar-thumb:hover {
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
 }
+
 .using{
   list-style: none;
   margin: 25px 0px 0px;
@@ -246,6 +245,7 @@ body::-webkit-scrollbar-thumb:hover {
   margin-top: 40px;
   margin-bottom: 25px;
 }
+
 .news-container p{
   width: 90%;
   margin-top: 25px;
@@ -287,7 +287,6 @@ body::-webkit-scrollbar-thumb:hover {
   margin-left: 65%;
 }
 
-
 .tutorial-container{
   width: 80%;
 }
@@ -296,6 +295,7 @@ body::-webkit-scrollbar-thumb:hover {
   margin-top: 40px;
   margin-bottom: 25px;
 }
+
 .tutorial-container p{
   width: 80%;
   margin-top: 15px;
@@ -310,21 +310,18 @@ body::-webkit-scrollbar-thumb:hover {
 /* game */
 
 .game-section {
-  background: linear-gradient(90deg, #dddddd  0%, rgba(207,74,74,0) 3%, rgba(190,4,4,0) 97%, #dddddd  100%);
-  background-image: linear-gradient(180deg, #dddddd  0%, rgba(207,74,74,0) 3%, rgba(190,4,4,0) 97%, #dddddd  100%), url('../img/locations/GoldenTemple.jpeg');
+  background: linear-gradient(90deg, #dddddd  0%, rgba(207,74,74,0) 2%, rgba(190,4,4,0) 98%, #dddddd  100%);
+  background-image: linear-gradient(180deg, #dddddd  0%, rgba(207,74,74,0) 2%, rgba(190,4,4,0) 98%, #dddddd  100%), url('../img/locations/GoldenTemple.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  max-height: 100%;
   display: grid;
-  grid-template-columns: 0.5fr 3fr repeat(1, 0.5fr);
-  grid-template-rows: repeat(1, 1fr);
-  grid-column-gap: 25px;
+  grid-template-columns: 0.25fr 0.5fr 0.25fr;
+  grid-template-rows: 0.05fr 0.05fr;
+  grid-column-gap: 1vh;
   grid-row-gap: 0px;
-  padding: 3%;
-  padding-right: 10%;
-  padding-left: 10%;
-  background-color: #dddddd;
+  padding: 2%;
+  background-color: rgba(248,248,248,0.85);
 
 }
 
@@ -333,48 +330,201 @@ body::-webkit-scrollbar-thumb:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 50px;
-  min-height: 30%;
-  min-width: 50%;
-  max-height: auto;
-  max-width: auto;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 25px;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: #ddddddbf;
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 1s; /* Firefox < 16 */
-   -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-       animation: fadein 1s;
+  -webkit-animation: fadein 1s;
+  animation: fadein 1s;
 }
 
+.fightbg{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5vh;
+  min-height: 55vh;
+  max-height: 55vh;
+  min-width: 70vh;
+  padding: 1vh;
+  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
+  background: rgba(248,248,248,0.85);
+}
+.fightbgsmh{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5vh;
+  min-height: 55vh;
+  max-height: 55vh;
+  min-width: 70vh;
+  padding: 1vh;
+  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
+  background: rgba(248,248,248,0.85);
+  position: relative;
+  top: 20%;
+}
 
+.FightKillReward{
+  position: relative;
+  top: -25%; 
+}
 
 @keyframes fadein {
 from { opacity: 0; }
 to   { opacity: 1; }
 }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
 from { opacity: 0; }
 to   { opacity: 1; }
 }
 
-/* Internet Explorer */
-@-ms-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
+/*fighting and killing an enemy */
+
+.FightKillAnimated {
+  -webkit-animation-duration:7s;
+  animation-duration:7s;
+  -webkit-animation-fill-mode:both;
+  animation-fill-mode:both;
 }
+
+.fadeOutUp {
+  -webkit-animation-name:fadeOutUp;
+  animation-name:fadeOutUp;
+}
+
+@-webkit-keyframes fadeOutUp  {
+  0% {
+    opacity:0;
+    -webkit-transform:translate3d(0, 60%, 0);
+    transform:translate3d(0, 60%, 0);
+ }
+ 
+  25% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+ }
+
+  75% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+    }
   
+  100% {
+      opacity: 0;
+      -webkit-transform:translate3d(0, -40%, 0);
+      transform:translate3d(0, -40%, 0);
+  }
+
+}
+
+@keyframes fadeOutUp  {
+  0% {
+    opacity:0;
+    -webkit-transform:translate3d(0, 60%, 0);
+    transform:translate3d(0, 60%, 0);
+ }
+ 
+  25% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+ }
+
+  75% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+    }
+  
+  100% {
+      opacity: 0;
+      -webkit-transform:translate3d(0, -40%, 0);
+      transform:translate3d(0, -40%, 0);
+  }
+
+}
+
+.fadeOutUp:nth-child(1) { animation-delay: 1.5s }
+.fadeOutUp:nth-child(2) { animation-delay: 2s }
+.fadeOutUp:nth-child(3) { animation-delay: 2.5s }
+.fadeOutUp:nth-child(4) { animation-delay: 3s }
+.fadeOutUp:nth-child(5) { animation-delay: 3.5s }
+.fadeOutUp:nth-child(6) { animation-delay: 4s }
+.fadeOutUp:nth-child(7) { animation-delay: 4.5s }
+.fadeOutUp:nth-child(8) { animation-delay: 5s }
+
+/* The rewards animation after the kill */
+.FightKillRewardAnimated {
+  -webkit-animation-duration:1.5s;
+  animation-duration:1.5s;
+  -webkit-animation-fill-mode:both;
+  animation-fill-mode:both;
+}
+
+.fadeInUpkill{
+  -webkit-animation-name:fadeInUpkill;
+  animation-name:fadeInUpkill;
+}
+
+@-webkit-keyframes fadeInUpkill  {
+  0% {
+    opacity:0;
+    -webkit-transform:translate3d(0, 60%, 0);
+    transform:translate3d(0, 60%, 0);
+  }
+ 
+  100% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+  }
+
+}
+
+@keyframes fadeInUpkill  {
+  0% {
+    opacity:0;
+    -webkit-transform:translate3d(0, 60%, 0);
+    transform:translate3d(0, 60%, 0);
+  }
+ 
+  100% {
+    opacity:1;
+    -webkit-transform:none;
+    transform:none;
+  }
+
+}
+
+.fadeInUpkill:nth-child(1) { animation-delay: 11.2s }
+.fadeInUpkill:nth-child(2) { animation-delay: 11.6s }
+.fadeInUpkill:nth-child(3) { animation-delay: 12.1s }
+.fadeInUpkill:nth-child(4) { animation-delay: 12.5s }
+.fadeInUpkill:nth-child(5) { animation-delay: 13s }
+.fadeInUpkill:nth-child(6) { animation-delay: 13.5s }
+.fadeInUpkill:nth-child(7) { animation-delay: 14s }
+.fadeInUpkill:nth-child(8) { animation-delay: 14.5s }
+.fadeInUpkill:nth-child(9) { animation-delay: 15s }
+.fadeInUpkill:nth-child(10) { animation-delay: 15.5s }
+.fadeInUpkill:nth-child(11) { animation-delay: 16s }
+.fadeInUpkill:nth-child(12) { animation-delay: 16.5s }
+.fadeInUpkill:nth-child(13) { animation-delay: 17s }
+.fadeInUpkill:nth-child(14) { animation-delay: 17.5s }
+.fadeInUpkill:nth-child(15) { animation-delay: 18s }
+.fadeInUpkill:nth-child(16) { animation-delay: 18.5s }
+.fadeInUpkill:nth-child(17) { animation-delay: 19s }
+.fadeInUpkill:nth-child(18) { animation-delay: 19.5s }
+.fadeInUpkill:nth-child(19) { animation-delay: 20s }
+.fadeInUpkill:nth-child(20) { animation-delay: 20.5s }
+.fadeInUpkill:nth-child(20) { animation-delay: 21s }
+.fadeInUpkill:nth-child(22) { animation-delay: 21.5s }
+.fadeInUpkill:nth-child(23) { animation-delay: 22s }
+.fadeInUpkill:nth-child(24) { animation-delay: 22.5s }
+
+
+/* Normal Fight animation */
 .animated {
   -webkit-animation-duration:1.3s;
   animation-duration:1.3s;
@@ -390,8 +540,8 @@ to   { opacity: 1; }
 @-webkit-keyframes fadeInUp  {
   0% {
      opacity:0;
-     -webkit-transform:translate3d(0, 100%, 0);
-     transform:translate3d(0, 100%, 0);
+     -webkit-transform:translate3d(0, 60%, 0);
+     transform:translate3d(0, 60%, 0);
   }
   
   100% {
@@ -420,28 +570,35 @@ to   { opacity: 1; }
 .fadeInUp:nth-child(1) { animation-delay: 0.5s }
 .fadeInUp:nth-child(2) { animation-delay: 1.2s }
 .fadeInUp:nth-child(3) { animation-delay: 1.9s }
-.fadeInUp:nth-child(4) { animation-delay: 3s }
-.fadeInUp:nth-child(5) { animation-delay: 4s }
-.fadeInUp:nth-child(6) { animation-delay: 5s }
-.fadeInUp:nth-child(7) { animation-delay: 5.7s }
-.fadeInUp:nth-child(8) { animation-delay: 6.4s }
-
-
+.fadeInUp:nth-child(4) { animation-delay: 2.6s }
+.fadeInUp:nth-child(5) { animation-delay: 3.3s }
+.fadeInUp:nth-child(6) { animation-delay: 4s }
+.fadeInUp:nth-child(7) { animation-delay: 4.7s }
+.fadeInUp:nth-child(8) { animation-delay: 5.4s }
+.fadeInUp:nth-child(9) { animation-delay: 6.1s }
+.fadeInUp:nth-child(10) { animation-delay: 6.8s }
+.fadeInUp:nth-child(11) { animation-delay: 7.5s }
+.fadeInUp:nth-child(12) { animation-delay: 8.2S }
+.fadeInUp:nth-child(13) { animation-delay: 9.8s }
+.fadeInUp:nth-child(14) { animation-delay: 10.5s }
 
 .bossimg{
   margin-right: auto;
   margin-left: auto;
-  max-width: 600px;
-  max-height: 400px;
-  border-radius: 100px;
-  margin-bottom: 50px;
+  max-width: 45vh;
+  max-height: 30vh;
+  border-radius: 5vh;
+  margin-bottom: 1vh;
 }
 
 .commands-container{
+  position: relative;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   background-color: #595959 0,5;
+  top: -5vh;
 }
 
 .game-container{
@@ -455,9 +612,10 @@ to   { opacity: 1; }
   display: flex;
   flex-direction: column;
   align-items: left;
+  margin-right: 0px;
   box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
   background: rgba(248,248,248,0.85);
-  padding: 1rem;
+  padding: 0.5rem;
   background-repeat: repeat;
   text-decoration-line: none;
   border-radius: 15px;
@@ -465,8 +623,8 @@ to   { opacity: 1; }
   cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  font-size: medium ;
   color: #303030;
-  max-width: auto;
 }
 
 .inventory-container ul{
@@ -480,29 +638,23 @@ to   { opacity: 1; }
 }
 
 .inventory-icons{
-  height: 2em;
+  height: 1em;
   float: right;
 }
 
 .inventory-icons-plus{
-  height: 2em;
+  height: 1em;
   float: right;
-  background: rgb(190,4,4);
-  background: -moz-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
-  background: -webkit-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
-  background: radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#be0404",endColorstr="#dddddd",GradientType=1);
-
-
 }
 
 .stats-container {
   display: flex;
   flex-direction: column;
   align-items: left;
+  margin-right: 0px;
   box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
   background: rgba(248,248,248,0.85);
-  padding: 1rem;
+  padding: 0.5rem;
   background-repeat: repeat;
   text-decoration-line: none;
   border-radius: 15px;
@@ -510,8 +662,8 @@ to   { opacity: 1; }
   cursor: pointer;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  font-size: medium ;
   color: #303030;
-  max-width: auto;
 }
 
 .stats-container ul{
@@ -532,27 +684,12 @@ to   { opacity: 1; }
   height: 2em;
   float: right;
   background: rgb(190,4,4);
-  background: -moz-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
-  background: -webkit-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
-  background: radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,1) 75%);
+  background: -moz-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
+  background: -webkit-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
+  background: radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#be0404",endColorstr="#dddddd",GradientType=1);
 }
 
-.welcome{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  min-height: 30%;
-  min-width: 50%;
-  max-height: auto;
-  max-width: auto;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: rgba(248,248,248,0.85);
-}
 /* commands */
 
 .commands-section {
