--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  line-height: normal;
 }
 
 
@@ -15,7 +14,7 @@
 .nav-bar{
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-content: center;
   margin: 0 5%;
   border-bottom: 3px solid #CCCCCC;
   border-left: 3px solid #C8C8C8;
@@ -23,9 +22,7 @@
   background: linear-gradient(180deg,#dddddd 44%,#dddddd 73%,#d5d5d5);
   border-radius: 15px;
   padding-top: 1rem;
-  background-repeat: repeat;
   color: #626262;
-  height: 75px;
   text-decoration-line: none;
   
 }
@@ -308,387 +305,6 @@ body::-webkit-scrollbar-thumb:hover {
   
 }
 /* game */
-
-.game-section {
-  background: linear-gradient(90deg, #dddddd  0%, rgba(207,74,74,0) 2%, rgba(190,4,4,0) 98%, #dddddd  100%);
-  background-image: linear-gradient(180deg, #dddddd  0%, rgba(207,74,74,0) 2%, rgba(190,4,4,0) 98%, #dddddd  100%), url('../img/locations/GoldenTemple.jpeg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: grid;
-  grid-template-columns: 0.25fr 0.5fr 0.25fr;
-  grid-template-rows: 0.05fr 0.05fr;
-  grid-column-gap: 1vh;
-  grid-row-gap: 0px;
-  padding: 2%;
-  background-color: rgba(248,248,248,0.85);
-
-}
-
-.game-content{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  -webkit-animation: fadein 1s;
-  animation: fadein 1s;
-}
-
-.fightbg{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5vh;
-  min-height: 55vh;
-  max-height: 55vh;
-  min-width: 70vh;
-  padding: 1vh;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: rgba(248,248,248,0.85);
-}
-.fightbgsmh{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5vh;
-  min-height: 55vh;
-  max-height: 55vh;
-  min-width: 70vh;
-  padding: 1vh;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: rgba(248,248,248,0.85);
-  position: relative;
-  top: 20%;
-}
-
-.FightKillReward{
-  position: relative;
-  top: -25%; 
-}
-
-@keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-@-webkit-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/*fighting and killing an enemy */
-
-.FightKillAnimated {
-  -webkit-animation-duration:7s;
-  animation-duration:7s;
-  -webkit-animation-fill-mode:both;
-  animation-fill-mode:both;
-}
-
-.fadeOutUp {
-  -webkit-animation-name:fadeOutUp;
-  animation-name:fadeOutUp;
-}
-
-@-webkit-keyframes fadeOutUp  {
-  0% {
-    opacity:0;
-    -webkit-transform:translate3d(0, 60%, 0);
-    transform:translate3d(0, 60%, 0);
- }
- 
-  25% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
- }
-
-  75% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
-    }
-  
-  100% {
-      opacity: 0;
-      -webkit-transform:translate3d(0, -40%, 0);
-      transform:translate3d(0, -40%, 0);
-  }
-
-}
-
-@keyframes fadeOutUp  {
-  0% {
-    opacity:0;
-    -webkit-transform:translate3d(0, 60%, 0);
-    transform:translate3d(0, 60%, 0);
- }
- 
-  25% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
- }
-
-  75% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
-    }
-  
-  100% {
-      opacity: 0;
-      -webkit-transform:translate3d(0, -40%, 0);
-      transform:translate3d(0, -40%, 0);
-  }
-
-}
-
-.fadeOutUp:nth-child(1) { animation-delay: 1.5s }
-.fadeOutUp:nth-child(2) { animation-delay: 2s }
-.fadeOutUp:nth-child(3) { animation-delay: 2.5s }
-.fadeOutUp:nth-child(4) { animation-delay: 3s }
-.fadeOutUp:nth-child(5) { animation-delay: 3.5s }
-.fadeOutUp:nth-child(6) { animation-delay: 4s }
-.fadeOutUp:nth-child(7) { animation-delay: 4.5s }
-.fadeOutUp:nth-child(8) { animation-delay: 5s }
-
-/* The rewards animation after the kill */
-.FightKillRewardAnimated {
-  -webkit-animation-duration:1.5s;
-  animation-duration:1.5s;
-  -webkit-animation-fill-mode:both;
-  animation-fill-mode:both;
-}
-
-.fadeInUpkill{
-  -webkit-animation-name:fadeInUpkill;
-  animation-name:fadeInUpkill;
-}
-
-@-webkit-keyframes fadeInUpkill  {
-  0% {
-    opacity:0;
-    -webkit-transform:translate3d(0, 60%, 0);
-    transform:translate3d(0, 60%, 0);
-  }
- 
-  100% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
-  }
-
-}
-
-@keyframes fadeInUpkill  {
-  0% {
-    opacity:0;
-    -webkit-transform:translate3d(0, 60%, 0);
-    transform:translate3d(0, 60%, 0);
-  }
- 
-  100% {
-    opacity:1;
-    -webkit-transform:none;
-    transform:none;
-  }
-
-}
-
-.fadeInUpkill:nth-child(1) { animation-delay: 11.2s }
-.fadeInUpkill:nth-child(2) { animation-delay: 11.6s }
-.fadeInUpkill:nth-child(3) { animation-delay: 12.1s }
-.fadeInUpkill:nth-child(4) { animation-delay: 12.5s }
-.fadeInUpkill:nth-child(5) { animation-delay: 13s }
-.fadeInUpkill:nth-child(6) { animation-delay: 13.5s }
-.fadeInUpkill:nth-child(7) { animation-delay: 14s }
-.fadeInUpkill:nth-child(8) { animation-delay: 14.5s }
-.fadeInUpkill:nth-child(9) { animation-delay: 15s }
-.fadeInUpkill:nth-child(10) { animation-delay: 15.5s }
-.fadeInUpkill:nth-child(11) { animation-delay: 16s }
-.fadeInUpkill:nth-child(12) { animation-delay: 16.5s }
-.fadeInUpkill:nth-child(13) { animation-delay: 17s }
-.fadeInUpkill:nth-child(14) { animation-delay: 17.5s }
-.fadeInUpkill:nth-child(15) { animation-delay: 18s }
-.fadeInUpkill:nth-child(16) { animation-delay: 18.5s }
-.fadeInUpkill:nth-child(17) { animation-delay: 19s }
-.fadeInUpkill:nth-child(18) { animation-delay: 19.5s }
-.fadeInUpkill:nth-child(19) { animation-delay: 20s }
-.fadeInUpkill:nth-child(20) { animation-delay: 20.5s }
-.fadeInUpkill:nth-child(20) { animation-delay: 21s }
-.fadeInUpkill:nth-child(22) { animation-delay: 21.5s }
-.fadeInUpkill:nth-child(23) { animation-delay: 22s }
-.fadeInUpkill:nth-child(24) { animation-delay: 22.5s }
-
-
-/* Normal Fight animation */
-.animated {
-  -webkit-animation-duration:1.3s;
-  animation-duration:1.3s;
-  -webkit-animation-fill-mode:both;
-  animation-fill-mode:both;
-}
-
-.fadeInUp {
-  -webkit-animation-name:fadeInUp;
-  animation-name:fadeInUp;
-}
-
-@-webkit-keyframes fadeInUp  {
-  0% {
-     opacity:0;
-     -webkit-transform:translate3d(0, 60%, 0);
-     transform:translate3d(0, 60%, 0);
-  }
-  
-  100% {
-     opacity:1;
-     -webkit-transform:none;
-     transform:none;
-  }
-
-}
-
-@keyframes fadeInUp  {
-  0% {
-     opacity:0;
-     -webkit-transform:translate3d(0, 60%, 0);
-     transform:translate3d(0, 60%, 0);
-  }
-  
-  100% {
-     opacity:1;
-     -webkit-transform:none;
-     transform:none;
-  }
-
-}
-
-.fadeInUp:nth-child(1) { animation-delay: 0.5s }
-.fadeInUp:nth-child(2) { animation-delay: 1.2s }
-.fadeInUp:nth-child(3) { animation-delay: 1.9s }
-.fadeInUp:nth-child(4) { animation-delay: 2.6s }
-.fadeInUp:nth-child(5) { animation-delay: 3.3s }
-.fadeInUp:nth-child(6) { animation-delay: 4s }
-.fadeInUp:nth-child(7) { animation-delay: 4.7s }
-.fadeInUp:nth-child(8) { animation-delay: 5.4s }
-.fadeInUp:nth-child(9) { animation-delay: 6.1s }
-.fadeInUp:nth-child(10) { animation-delay: 6.8s }
-.fadeInUp:nth-child(11) { animation-delay: 7.5s }
-.fadeInUp:nth-child(12) { animation-delay: 8.2S }
-.fadeInUp:nth-child(13) { animation-delay: 9.8s }
-.fadeInUp:nth-child(14) { animation-delay: 10.5s }
-
-.bossimg{
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 45vh;
-  max-height: 30vh;
-  border-radius: 5vh;
-  margin-bottom: 1vh;
-}
-
-.commands-container{
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background-color: #595959 0,5;
-  top: -5vh;
-}
-
-.game-container{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.inventory-container{
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  margin-right: 0px;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: rgba(248,248,248,0.85);
-  padding: 0.5rem;
-  background-repeat: repeat;
-  text-decoration-line: none;
-  border-radius: 15px;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  font-size: medium ;
-  color: #303030;
-}
-
-.inventory-container ul{
-  list-style-type: none
-  
-}
-
-.inventory-container li{
-  border-bottom: 1px solid #CCCCCC;
-  line-height: 2em;
-}
-
-.inventory-icons{
-  height: 1em;
-  float: right;
-}
-
-.inventory-icons-plus{
-  height: 1em;
-  float: right;
-}
-
-.stats-container {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  margin-right: 0px;
-  box-shadow: 0 4px 20px 0 rgb(0 0 0 / 20%);
-  background: rgba(248,248,248,0.85);
-  padding: 0.5rem;
-  background-repeat: repeat;
-  text-decoration-line: none;
-  border-radius: 15px;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  font-size: medium ;
-  color: #303030;
-}
-
-.stats-container ul{
-  list-style-type: none
-}
-
-.stats-container li{
-  border-bottom: 1px solid #CCCCCC;
-  line-height: 2em;
-}
-
-.stats-icons{
-  height: 2em;
-  float: right;
-}
-
-.stats-icons-plus{
-  height: 2em;
-  float: right;
-  background: rgb(190,4,4);
-  background: -moz-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
-  background: -webkit-radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
-  background: radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#be0404",endColorstr="#dddddd",GradientType=1);
-}
 
 /* commands */
 
@@ -1006,7 +622,9 @@ to   { opacity: 1; }
 }
 
 /* FOOTER */
-
+.footer{
+  background-color: #dddddd;
+}
 .container2{
   background: #dddddd;
   background: linear-gradient(180deg,#ddddddf2  0%, #dddddd 5%, #dddddd 98%, #ddddddf2  100%);
