--- a/css/stylegame.css
+++ b/css/stylegame.css
@@ -216,3 +216,23 @@ to   { opacity: 1; }
   background: radial-gradient(circle, rgba(190,4,4,1) 50%, rgba(248,248,248,0) 75%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#be0404",endColorstr="#dddddd",GradientType=1);
 }
+
+.commands-button {
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  background: rgba(248,248,248,0.85);
+  color: #303030;
+  border-radius: 8px;
+  padding: 0.7vh 1.1vh 0.7vh;
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0.8vh;
+  transition: transform 200ms,background 200ms;
+}
+.commands-button:hover{
+  transform: translateY(-2px);
+  background: #c00404;
+}
