--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,21 @@
 /* Nav */
 .nav-bar-bg{
   background-color: #dddddd;
-  min-height: 100px;
 
 }
 .nav-bar{
   display: flex;
   justify-content: space-between;
   align-content: center;
-  margin: 0 5%;
   border-bottom: 3px solid #CCCCCC;
   border-left: 3px solid #C8C8C8;
   border-right: 3px solid #C8C8C8;
   background: linear-gradient(180deg,#dddddd 44%,#dddddd 73%,#d5d5d5);
-  border-radius: 15px;
+  border-radius: 0px 0px 15px 15px;
   padding-top: 1rem;
   color: #626262;
   text-decoration-line: none;
+  
   
 }
 
@@ -41,6 +40,21 @@
   transition: 0.2s ease;
   text-decoration: none;
   
+}
+
+.navicon{
+  display: flex;
+  max-width: 4vh;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 3px solid #CCCCCC;
+  border-left: 3px solid #C8C8C8;
+  border-right: 3px solid #C8C8C8;
+  background: linear-gradient(180deg,#dddddd 44%,#dddddd 73%,#d5d5d5);
+  border-radius: 0px 0px 15px 15px;
+  position: relative;
+  
+  margin:0 0 0 90%;
 }
 
 /* Hero */
