--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@
   background-position: right;
   background-repeat: no-repeat;
   padding: 20px 20px 20px 0px;
-  
+  max-width: 60%;
+  margin: auto;
 }
 
 .hero-container{
